# monzo-lunch-money

./: .gitignore  .pre-commit-config.yaml  Makefile  main.py  pyproject.toml
monzo_lunch_money/custom/: apply_lunch_money_transformations.py  apply_transformations.py  get_changed_lunch_money_transactions_dct.py  get_monzo_auth.py  get_new_lunch_money_transactions_dct.py  identify_changed_transactions.py  identify_new_transactions.py
monzo_lunch_money/data_exporters/: update_changed_lunch_money_transactions.py  update_changed_transactions.py  upload_new_lunch_money_transactions.py  upload_new_transactions.py
monzo_lunch_money/data_loaders/: get_main_transactions.py  get_pot_transactions.py
